summative.moria.Moria.scala.error
Compilation error:
Moria:2: error: not found: value Direction
  while (isOverBaggle() == false && getDirection() == Direction.WEST){
                                                      ^