summative.moria.Moria.scala.code
do{
  while (isOverBaggle() == false && getDirection() == Direction.WEST){
    forward()
  }
  
} while (isFacingWall() == false)